<resources>
    <string name="app_name">Calculadora de Joyeros 2021</string>
    <string name="app_subtitle">Por J.R. Blanco - Blanco Joyeros</string>
    <string name="etiquetaProg">Desarrollado por</string>
    <string name="prog">José Ramón Blanco Gutiérrez</string>
    <string name="etiquetaEmail">Correo de contacto</string>
    <string name="correo">CantabriaMaker@gmail.com</string>
    <string name="etiquetaRRSS">Redes sociales</string>
    <string name="twitter">https://twitter.com/jr_blanco_</string>
    <string name="instagram">https://www.instagram.com/jr.blanco.cantabria</string>
    <string name="etiquetaOpenSource">Código fuente - Open Source</string>
    <string name="github">https://github.com/jrcosio/CalculadoradeJoyeros2021.git</string>
    <string name="btnOK">OK</string>
    <string name="etiquetaORO24K">Introduce el oro de 24K</string>
    <string name="ImagenORO">Imagen ORO</string>
    <string name="textGrORO">Gr. de oro</string>
    <string name="etiquetaTipoOro">Tipo de oro</string>
    <string name="gr">gr</string>
    <string name="btn18K">18 K</string>
    <string name="btn14K">14 K</string>
    <string name="btn12K">12 K</string>
    <string name="EtiquetaColorOro">Color del oro</string>
    <string name="btnAmarillo">AMARILLO</string>
    <string name="btnRosa">ROSA</string>
    <string name="btnBlanco">BLANCO</string>

    <string name="etiquetaPlataFina">Introduce la Plata fina 999 mm</string>
    <string name="textGrPlata">Gr. de plata</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="TipoSoldPlata">Tipo de Soldadura</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>