<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoldaduraPlataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondoactivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvGramosPlataSoldatura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/plata"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toTopOf="@+id/cvTiposSolPlata"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp">

                <TextView
                    android:id="@+id/txtTitlePlataSol"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/etiquetaPlataFina"
                    android:textColor="@color/menuOro"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageLingotePlata"
                    android:layout_width="55dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:contentDescription="@string/ImagenORO"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitlePlataSol"
                    app:srcCompat="@drawable/plata_512" />

                <EditText
                    android:id="@+id/editPlataGramosSol"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/textGrPlata"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageLingotePlata"
                    app:layout_constraintEnd_toStartOf="@+id/textgr"
                    app:layout_constraintStart_toEndOf="@+id/imageLingotePlata"
                    app:layout_constraintTop_toTopOf="@+id/imageLingotePlata"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textgr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/gr"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editPlataGramosSol"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editPlataGramosSol"
                    tools:ignore="TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvTiposSolPlata"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/menuOro"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toTopOf="@+id/cvResultSolPlata"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvGramosPlataSoldatura">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingTop="5dp"
                android:paddingRight="24dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/txtTitlePlataSol2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/TipoSoldPlata"
                    android:textColor="@color/teal_200"
                    android:textSize="14sp" />

                <RadioGroup
                    android:id="@+id/rbtnGroupSolPlata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rbtnSolPlataMuyFloja"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Muy Floja *"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/rbtnSolPlataFloja"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Floja"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/rbtnSolPlataMedia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Media o Normal"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/rbtnSolPlataFuerte"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Fuerte"
                        android:textColor="@color/white" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="sans-serif-light"
                    android:text="*   Recomendada para composturas"
                    android:textColor="@color/plata"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvResultSolPlata"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/teal_700"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvTiposSolPlata">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvResultLaton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:elevation="5dp"
                    app:cardBackgroundColor="@color/menuOro"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="46dp"
                            android:layout_height="41dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="14dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/laton" />

                        <TextView
                            android:id="@+id/txtResultadoLaton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:fontFamily="sans-serif-black"
                            android:gravity="right"
                            android:textColor="@color/gold"
                            android:textSize="34sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/textView19"
                            app:layout_constraintStart_toEndOf="@+id/imageView8" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Latón"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="@+id/imageView8"
                            app:layout_constraintStart_toStartOf="@+id/imageView8"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="2dp"
                            android:fontFamily="sans-serif-light"
                            android:gravity="right"
                            android:text="@string/gr"
                            android:textColor="@color/gold"
                            android:textSize="34sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>